<resources>
    <string name="app_name">Manajemen Pangkat</string>
    <string name="text_all_right_reserved">Aplikasi Manajemen Data Kenaikan Pangkat Pegawai Negeri Sipil UIN Alauddin</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="login">LOGIN</string>
    <string name="lanjut">Lanjut</string>
    <string name="no_handphone">No. Handphone</string>
    <string name="password">Password</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="text_atau">Atau</string>
    <string name="sign_up_dengan_jejaring_sosial">Daftar dengan jejaring sosial</string>
    <string name="full_name">Nama lengkap tanpa gelar</string>
    <string name="email">Email</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="have_account">Sudah punya akun?</string>
    <string name="enter_code">Masukkan Kode Verifikasi</string>
    <string name="username">Username</string>
    <string name="silahkan_pilih_jenis_akun_yang_akan_anda_buat">Silahkan pilih jenis akun yang akan Anda Buat</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="mohon_tunggu">Mohon Tunggu…</string>
    <string name="lewati">Lewati</string>
    <string name="verifikasi_akun">Verifikasi Akun</string>
    <string name="action_chat">Chat</string>
    <string name="action_notif">Notifikasi</string>
    <string name="action_add">Tambah</string>
    <string name="action_share">Bagikan</string>
    <string name="menu_profile">Edit Profil</string>
    <string name="menu_kontak">Kontak</string>
    <string name="menu_pesan">Pesan</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="pengaturan_akun">Pengaturan Akun</string>
    <string name="pengaturan_privasi">Pengaturan Privasi</string>
    <string name="sign_out">Keluar</string>
    <string name="nama">Nama</string>
    <string name="noHandphone">No. Handphone</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="laki_laki">Laki - Laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="tempat_lahir">Tempat Lahir</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="alamat_domisili">Alamat Domisili</string>
    <string name="update">Simpan</string>
    <string name="gelar">Gelar</string>
    <string name="provinsi">Provinsi</string>
    <string name="strata_1_sarjana">Strata 1 (Sarjana)</string>
    <string name="nama_perguruan_tinggi">Nama perguruan tinggi</string>
    <string name="strata_2_magister">Strata 2 (Magister)</string>
    <string name="strata_3_doktor">Strata 3 (Doktor)</string>
    <string name="kota_perguruan_tinggi">Kota perguruan tinggi</string>
    <string name="tahun_tamat">Tahun tamat</string>
    <string name="jurusan_program_studi">Jurusan / program studi</string>
    <string name="gelar_akademik">Gelar Akademik</string>
    <string name="beranda">Beranda</string>
    <string name="privasi">Privasi</string>
    <string name="tambah_jenis_akun">Tambah Jenis Akun</string>
    <string name="hapus_jenis_akun">Nonaktifkan Akun</string>
    <string name="pusat_bantuan">Pusat Bantuan</string>
    <string name="tampilkan_alamat_saya">Tampilkan Alamat Saya</string>
    <string name="tampilkan_gelar_pendidikan">Tampilkan Gelar Pendidikan</string>
    <string name="tampilkan_lokasi_terkini_saya">Tampilkan Lokasi Saya</string>
    <string name="tampilkan_tempat_tanggal_lahir">Tampilkan tempat tanggal lahir</string>
    <string name="kecamatan">Kecamatan,</string>
    <string name="kabupaten_kota">Kabupaten / Kota,</string>
    <string name="input_text">Input Text</string>
    <string name="tambah">Tambah</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="ganti_akun">Ganti Akun</string>
    <string name="alamat">Alamat</string>
    <string name="pick_alamt_kantor_di_map">Pick alamat kantor di map</string>
    <string name="alamat_rumah_jalan_perumahan_block_no">Alamat Rumah (Jalan, Perumahan, Block, No)</string>
    <string name="reset">Reset</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pick_alamat">Pick Alamat</string>
    <string name="silahkan_pick_alamat_anda">Silahkan pick alamat anda</string>
    <string name="tolak">TOLAK</string>
    <string name="terima">TERIMA</string>
    <string name="username_atau_no_handphone">Username atau No. Handphone</string>
    <string name="lokasi">Lokasi</string>
    <string name="navigasi">Navigasi</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="kecamatan_dan_kota">Kecamatan dan Kota</string>
    <string name="waktu">Waktu</string>
    <string name="tanggal">Tanggal</string>
    <string name="nomor_handphone_aktif">Nomor handphone aktif</string>
    <string name="cari">Cari</string>
    <string name="status">Status</string>
    <string name="belum">Belum</string>
    <string name="ya">Ya</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="ketikkan_pesan">Ketikkan pesan</string>
    <string name="message">message</string>
    <string name="anda">Anda</string>
    <string name="foto">Foto</string>
    <string name="admin">Admin</string>
    <string name="undescot">_</string>
    <string name="masukkan_kode">Masukkan kode</string>
    <string name="list_temp_data">List Temp Data</string>
    <string name="nama_kontak">Nama Kontak</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="register">Register</string>
    <string name="blank_fragment_1">Blank Fragment 1</string>
    <string name="blank_fragment_2">Blank Fragment 2</string>
    <string name="menu_setting">Setting</string>
    <string name="main_activity">Main Activity</string>
    <string name="authentication">Authentication</string>
    <string name="digits_number">1234567890</string>
    <string name="nip">NIP</string>
    <string name="jabatan">Jabatan</string>
    <string name="gol">Gol</string>
    <string name="informasi_kenaikan_pangkat_jabatan">Informasi Kenaikan Pangkat / Jabatan</string>
    <string name="biodata">Biodata</string>
    <string name="daftar_usulan">Daftar Usulan</string>
    <string name="arsip">Arsip</string>
    <string name="gol_pangkat">Gol. / Pangkat</string>
    <string name="nip_baru">NIP Baru</string>
    <string name="nip_lama">NIP Lama</string>
    <string name="gelar_depan">Gelar Depan</string>
    <string name="nama2">Nama</string>
    <string name="pendidikan_tertinggi">Pendidikan Tertinggi</string>
    <string name="tmt_pangkat">TMT Pangkat</string>
    <string name="no_sk_pangkat">No. SK Pangkat</string>
    <string name="tmt_jabatan">TMT Jabatan</string>
    <string name="tanggal_sk_pangkat">Tanggal SK Pangkat</string>
    <string name="nomor_sk_jabatan">Nomor SK Jabatan</string>
    <string name="tanggal_sk_jabatan">Tanggal SK Jabatan</string>
    <string name="gelar_belakang">Gelar Belakang</string>
    <string name="main_user">Main User</string>
    <string name="back">Back</string>
    <string name="gol_pangkat_lama">Gol. / Pangkat Lama</string>
    <string name="nama_pangkat">Nama Pangkat</string>
    <string name="gol_pangkat_baru">Gol. / Pangkat Baru</string>
    <string name="jabatan_lama">Jabatan Lama</string>
    <string name="jabatan_baru">Jabatan Baru</string>
    <string name="jenis_jabatan">Jenis Jabatan</string>
    <string name="tmt_eselon">TMT Eselon</string>
    <string name="no_sk">No. SK</string>
    <string name="titik_dua">:</string>
    <string name="jabatan_terakhir">Jabatan Terakhir</string>
    <string name="pangkat_terakhir">Pangkat Terakhir</string>
    <string name="jenis_kenaikan_gol">Jenis Kenaikan Gol.</string>
    <string name="ket_kenaikan_gol">Ket. Kenaikan Gol.</string>
    <string name="ke">Ke</string>
    <string name="daftar_pengusulan">Daftar Pengusulan</string>
    <string name="save">Save</string>
    <string name="next">Next</string>
    <string name="upload">Upload</string>
    <string name="persyaratan_administrasi">Persyaratan Administrasi</string>
    <string name="_1_fotocopy_karpeg_legalisir">1. Fotocopy Karpeg (Legalisir)</string>
    <string name="_2_fotocopy_sk_cpns_legalisir">2. Fotocopy SK CPNS (Legalisir)</string>
    <string name="_3_fotocopy_sk_pns_legalisir">3. Fotocopy SK PNS (Legalisir)</string>
    <string name="_4_fotocopy_ijazah_legalisir">4. Fotocopy Ijazah (Legalisir)</string>
    <string name="_5_transkrip_nilai_s2_s3_legalisir">5. Transkrip Nilai S2/S3 (Legalisir)</string>
    <string name="_6_dupak_dari_fakultas">6. Dupak dari Fakultas</string>
    <string name="_7_surat_keterangan_mata_kuliah_binaan">7. Surat Keterangan Mata Kuliah Binaan</string>
    <string name="_8_karya_ilmiah">8. Karya Ilmiah yang di Publikasikan pada Jurnal Ilmiah Nasional sebagai Penulis Utama (Minimal 1)</string>
    <string name="_9_asli_skp_2_dua_tahun_terakhir">9. Asli SKP 2 (Dua) Tahun Terakhir</string>
    <string name="_10_undangan">10. Undangan, Daftar Hadir, dan Berita Acara Pertimbangan Persetujuan Senat</string>
    <string name="halaman_utama">Halaman Utama</string>
    <string name="keluar">Keluar</string>
    <string name="arsip_data_pegawai_dan_sk">Arsip Data Pegawai dan SK</string>
    <string name="usul_kenaikan_pangkat">Usul Kenaikan Pangkat</string>
    <string name="tempat_dan_tgl_lahir">Tempat dan Tgl Lahir</string>
    <string name="pendidikan_terakhir">Pendidikan Terakhir</string>
    <string name="pangkat_gol">Pangkat/Gol</string>
    <string name="pangkat_lama">Pangkat Lama</string>
    <string name="pangkat">Pangkat</string>
    <string name="golongan">Golongan</string>
    <string name="tgl_sk_pangkat">Tgl SK Pangkat</string>
    <string name="pangkat_baru">Pangkat Baru</string>
    <string name="usul_kp">Usul KP</string>
    <string name="menjadi">Menjadi</string>
    <string name="pangkat_gol_dan_ruang">Pangkat Gol. dan Ruang</string>
    <string name="_1_karpeg">1. KARPEG</string>
    <string name="_2_sk_cpns">2. SK CPNS</string>
    <string name="_3_sk_pns">3. SK PNS</string>
    <string name="_4_sk_pangkat_terakhir">4. SK Pangkat Terakhir</string>
    <string name="_5_sk_jabatan_pelaksana_sk_jabatan_terakhir">5. SK Jabatan Pelaksana/SK Jabatan Terakhir</string>
    <string name="_6_pak_terakhir">6. PAK Terakhir</string>
    <string name="_7_sk_fungsional_terakhir">7. SK Fungsional Terakhir</string>
    <string name="selesai">Selesai</string>
    <string name="pengajuan_selesai2">Pengajuan Selesai!</string>
    <string name="kembali">Kembali</string>
    <string name="status_pengajuan_berkas">Status Pengajuan Berkas</string>
    <string name="_1">1</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_6">6</string>
    <string name="pengajuan_berkas">Pengajuan Berkas</string>
    <string name="verifikasi_admin_fakultas">Verifikasi Admin Univ/Fakultas</string>
    <string name="disposisi_rektor">Disposisi Rektor</string>
    <string name="disposisi_admin_bagian_umum">Disposisi Admin Bagian Umum</string>
    <string name="disposisi_admin_bagian_kepegawaian">Disposisi Admin Bagian Kepegawaian</string>
    <string name="persetujuan_bkn">Persetujuan BKN</string>
    <string name="sedang_diproses">Sedang diproses</string>
    <string name="awal">Awal</string>
    <string name="usulan">Usulan</string>
    <string name="_7">7</string>
    <string name="sk_baru">SK Baru</string>
</resources>