<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/CustomStyle"
    android:background="@color/white"
    tools:context="com.exomatik.manajemenpangkat.ui.pegawai.StatusPengajuanActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:elevation="@dimen/h2"
            android:background="@color/white"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.appcompat.widget.AppCompatImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_back_black"
                    android:background="@drawable/btn_circle_gray"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="@dimen/h3"
                    android:id="@+id/btnBack"
                    />
                <androidx.appcompat.widget.AppCompatTextView
                    android:text="@string/status_pengajuan_berkas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/roboto_regular"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_h3"
                    android:textStyle="bold"
                    tools:ignore="RelativeOverlap" />
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/h2"
            android:orientation="vertical"
            android:layout_below="@+id/toolbar"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/text_h2"
            >
            <RelativeLayout
                android:layout_width="@dimen/margin_large"
                android:layout_height="@dimen/margin_large">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@color/gray1"
                    android:id="@+id/status1"
                    />
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_1"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:fontFamily="@font/roboto_regular"
                    android:layout_centerInParent="true"
                    android:id="@+id/textStatus1"
                    />
            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pengajuan_berkas"
                android:textSize="@dimen/text_h2"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto_regular"
                />

            <View
                android:layout_width="2dp"
                android:layout_height="@dimen/_30"
                android:background="@color/gray1"
                android:layout_marginTop="@dimen/h2"
                android:layout_marginBottom="@dimen/h2"
                />

            <RelativeLayout
                android:layout_width="@dimen/margin_large"
                android:layout_height="@dimen/margin_large">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@color/gray1"
                    android:id="@+id/status2"
                    />
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_2"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:fontFamily="@font/roboto_regular"
                    android:layout_centerInParent="true"
                    android:id="@+id/textStatus2"
                    />
            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verifikasi_admin_fakultas"
                android:textSize="@dimen/text_h2"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto_regular"
                />

            <View
                android:layout_width="2dp"
                android:layout_height="@dimen/_30"
                android:background="@color/gray1"
                android:layout_marginTop="@dimen/h2"
                android:layout_marginBottom="@dimen/h2"
                />

            <RelativeLayout
                android:layout_width="@dimen/margin_large"
                android:layout_height="@dimen/margin_large">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@color/gray1"
                    android:id="@+id/status3"
                    />
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_3"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:fontFamily="@font/roboto_regular"
                    android:layout_centerInParent="true"
                    android:id="@+id/textStatus3"
                    />
            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disposisi_rektor"
                android:textSize="@dimen/text_h2"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto_regular"
                />

            <View
                android:layout_width="2dp"
                android:layout_height="@dimen/_30"
                android:background="@color/gray1"
                android:layout_marginTop="@dimen/h2"
                android:layout_marginBottom="@dimen/h2"
                />

            <RelativeLayout
                android:layout_width="@dimen/margin_large"
                android:layout_height="@dimen/margin_large">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@color/gray1"
                    android:id="@+id/status4"
                    />
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_4"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:fontFamily="@font/roboto_regular"
                    android:layout_centerInParent="true"
                    android:id="@+id/textStatus4"
                    />
            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disposisi_admin_bagian_umum"
                android:textSize="@dimen/text_h2"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto_regular"
                />

            <View
                android:layout_width="2dp"
                android:layout_height="@dimen/_30"
                android:background="@color/gray1"
                android:layout_marginTop="@dimen/h2"
                android:layout_marginBottom="@dimen/h2"
                />

            <RelativeLayout
                android:layout_width="@dimen/margin_large"
                android:layout_height="@dimen/margin_large">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@color/gray1"
                    android:id="@+id/status5"
                    />
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_5"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:fontFamily="@font/roboto_regular"
                    android:layout_centerInParent="true"
                    android:id="@+id/textStatus5"
                    />
            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disposisi_admin_bagian_kepegawaian"
                android:textSize="@dimen/text_h2"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto_regular"
                />

            <View
                android:layout_width="2dp"
                android:layout_height="@dimen/_30"
                android:background="@color/gray1"
                android:layout_marginTop="@dimen/h2"
                android:layout_marginBottom="@dimen/h2"
                />

            <RelativeLayout
                android:layout_width="@dimen/margin_large"
                android:layout_height="@dimen/margin_large">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@color/gray1"
                    android:id="@+id/status6"
                    />
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_6"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:fontFamily="@font/roboto_regular"
                    android:layout_centerInParent="true"
                    android:id="@+id/textStatus6"
                    />
            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/persetujuan_bkn"
                android:textSize="@dimen/text_h2"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto_regular"
                />

            <View
                android:layout_width="2dp"
                android:layout_height="@dimen/_30"
                android:background="@color/gray1"
                android:layout_marginTop="@dimen/h2"
                android:layout_marginBottom="@dimen/h2"
                />

            <RelativeLayout
                android:layout_width="@dimen/margin_large"
                android:layout_height="@dimen/margin_large">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@color/gray1"
                    android:id="@+id/status7"
                    />
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_7"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:fontFamily="@font/roboto_regular"
                    android:layout_centerInParent="true"
                    android:id="@+id/textStatus7"
                    />
            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sk_baru"
                android:textSize="@dimen/text_h2"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto_regular"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_large"
                android:background="@android:color/transparent"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <include layout="@layout/progress_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progress"
            android:visibility="gone"
            android:layout_centerInParent="true"
            />

    </RelativeLayout>
</androidx.core.widget.NestedScrollView>