<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/CustomTheme">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/h2"
        app:cardCornerRadius="@dimen/h2"
        app:cardElevation="@dimen/h2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/h2">

            <androidx.cardview.widget.CardView
                android:id="@+id/imgMail"
                android:layout_width="@dimen/_75"
                android:layout_height="@dimen/_75"
                app:cardBackgroundColor="@color/gray0"
                app:cardCornerRadius="@dimen/h3"
                android:layout_centerVertical="true"
                >

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/h2"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_file_gray" />
            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/h2"
                android:layout_toEndOf="@+id/imgMail"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/pengajuan_berkas"
                android:textColor="@color/black"
                android:textSize="@dimen/text_h3"
                android:textStyle="bold"
                android:id="@+id/textName"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/h2"
                android:layout_marginTop="@dimen/h2"
                android:layout_toEndOf="@+id/imgMail"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/awal"
                android:textColor="@color/red1"
                android:textSize="@dimen/text_h2"
                android:layout_below="@+id/textName"
                android:id="@+id/textAwal"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/h2"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/menjadi"
                android:textColor="@color/gray3"
                android:textSize="@dimen/text_h2"
                android:layout_below="@+id/textAwal"
                android:id="@+id/textMenjadi"
                android:layout_centerHorizontal="true"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/h2"
                android:layout_toEndOf="@+id/imgMail"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/usulan"
                android:textColor="@color/green1"
                android:textStyle="bold"
                android:textSize="@dimen/text_h2"
                android:layout_below="@+id/textMenjadi"
                android:id="@+id/textUsulan"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/h2"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/sedang_diproses"
                android:textColor="@color/gray3"
                android:textSize="@dimen/text_h2"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="false"
                android:layout_below="@+id/textUsulan"
                android:layout_marginBottom="@dimen/h2"
                android:id="@+id/textTanggal"
                tools:ignore="RelativeOverlap"
                />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>